use gentium book basic, fix spacing

--- a/bknet/static/css/style.css
+++ b/bknet/static/css/style.css
@@ -1,3 +1,53 @@
+/* CSS reset from
+   http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 #nav {
     padding-left: 0;
     padding-right: 10px;
@@ -6,10 +56,10 @@
 #nav li {
     display: inline;
 }
-#nav li:after {
-    content: " ~";
+#nav li:before {
+    content: "~ ";
 }
-#nav li:last-child:after {
+#nav li:first-child:before {
     content: "";
 }
 
@@ -28,20 +78,31 @@ html {
 }
 body {
     position:relative;
-    width:640px;
+    width:480px;
     margin:0 auto;
     color:#222;
-    font: 0.95em Georgia, serif;
+    font: 16px 'Gentium Book Basic', serif;
+}
+h1, h2 {
+    font-weight: 700;
+    margin: 10px 0;
+}
+h1 {
+    font-size: 30pt;
+}
+h2 {
+    font-size: 22pt;
 }
 p {
-    line-height:1.5em;
+    line-height: 24px;
+    margin:8px 0;
 }
 .aside {
     position:absolute;
     left:-171px;
     width: 161px;
 }
-#posts > p, * /*TODO fix*/ p + p {
+/*#posts > p, * p + */ p {
     text-indent:0.25in;
 }
 .post_title {
